tidying up issue01

--- a/slack_config.conf
+++ b/slack_config.conf
@@ -4,8 +4,10 @@
 
 API_KEY = xoxb-XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 
-BOT_NAME = rpiserver
-USER_NAME = philipworman
+BOT_NAME = botname
+#put you name below for greeting purposes
+MASTER = master
+
 
 [WEBHOOKS]
 
