Added functionality to Status plugin to check IP address and ist devices currently on router - this is set up for a BT HomeHub (192.168.1.254), but can be modified
the plugin can recognise familiar MAC addresses by changing the Slack Config file

--- a/slack_config.conf
+++ b/slack_config.conf
@@ -31,4 +31,9 @@ MOTION_FOLDER = /home/pi/motioncapture/
 # slack server ping frequency in seconds
 PING_FREQUENCY = 15
 
+[MAC DEVICE NAMES]
+
+#for the plugin_status router check
+
+KNOWN_DEVICES={'b1:00:ab:4a:00:a1':'name of device'}
 
